# MedVAE

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml  setup.py
.github/workflows/: mdformat.yml  pre-commit.yaml
configs/: finetuned_vae.yaml  ours-8x1-new.yaml
configs/criterion/: biomedclip.yaml  default.yaml  lpips_with_discriminator.yaml
configs/dataloader/: default.yaml  example_dataset.yaml  mmgs.yaml  mri_ct_3d.yaml  oasis.yaml
configs/experiment/: example_cls.yaml  medvae_2d_finetuning.yaml  medvae_4x_1c_2d_finetuning.yaml  medvae_4x_1c_2d_s2_finetuning.yaml  medvae_4x_1c_3d_finetuning.yaml  medvae_4x_3c_2d_finetuning.yaml  medvae_4x_3c_2d_s2_finetuning.yaml
configs/logger/: wandb.yaml
configs/metrics/: reconstruction_3d.yaml  reconstruction_all.yaml  reconstruction_minimal.yaml
configs/model/: monai_seresnet152.yaml
configs/optimizer/: default.yaml
configs/paths/: default.yaml
documentation/: classification.md  create_csv.ipynb  create_csv.py  demo.ipynb  finetune.md  inference.md  test_finetuned_vae.ipynb
medvae/: __init__.py  data  medvae.py  medvae_cls.py  medvae_finetune.py  medvae_finetune_s2.py  medvae_inference.py  medvae_main.py
medvae/dataloaders/: __init__.py  concat_dataset.py  generic_dataset.py
medvae/losses/: __init__.py  vae_losses.py
medvae/metrics/: __init__.py  reconstruction_metrics.py
medvae/models/: __init__.py  autoencoder_kl.py  autoencoder_kl_3d.py
medvae/utils/: extras.py  factory.py  loaders.py  lora.py  lr_schedulers.py  transforms.py
medvae/utils/cls/: __init__.py  train_components.py
medvae/utils/vae/: diffusionmodels.py  diffusionmodels_3d.py  loss_components.py  train_components.py  train_components_stage2.py
scripts/: medvae_inference.py
